<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Notes</string>
    <string name="app_author">Igor Melo</string>
    <string name="authors_sid">100540931</string>
    <string name="course">Mobile Device (CSCI4100U)</string>
    <string name="assignment_no">Assignment 1</string>
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="note_title_hint">Note Title</string>
    <string name="note_content_hint">Note Content</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_note_edit">Note Edit</string>
    <string name="empty_list_text">New note</string>
    <string name="action_new_note">Create Note</string>
    <string name="action_options">More Options</string>
    <string name="action_sort">Sort</string>

    <string-array name="sorting">
        <item>Alphabetical (ASC)</item>
        <item>Alphabetical (DESC)</item>
        <item>Date and Time (ASC)</item>
        <item>Date and Time (DESC)</item>
        <item>Group by Color</item>
    </string-array>

    <string name="action_delete_all">Delete all notes?</string>
    <string name="action_about">About</string>
    <string name="action_quit">Quit</string>
    <string name="confirm_exit">Confirm Exit...</string>

</resources>
