<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SimpleNotes" >

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="always"
        android:orderInCategory="1"
        android:title="Search"/>

    <item android:id="@+id/action_new_note"
        android:title="@string/action_new_note"
        android:icon="@drawable/ic_menu_moreoverflow_normal_holo_dark"
        android:orderInCategory="2"
        android:showAsAction= "always"/>

    <item android:id="@+id/action_options"
        android:title="@string/action_options"
        android:icon="@drawable/ic_menu_moreoverflow_normal_holo_dark"
        android:orderInCategory="3"
        android:showAsAction= "always">

        <item android:id="@+id/action_sort"
            android:title="@string/action_sort"
            android:showAsAction= "never"/>

        <item android:id="@+id/action_delete_all"
            android:title="@string/action_delete_all"
            android:showAsAction= "never"/>

        <item android:id="@+id/action_about"
            android:title="@string/action_about"
            android:showAsAction= "never"/>

        <item android:id="@+id/action_quit"
            android:title="@string/action_quit"
            android:showAsAction= "never"/>

    </item>
</menu>
